Fix navbar collapse not hiding list

--- a/css/main.scss
+++ b/css/main.scss
@@ -35,16 +35,14 @@ $color-background-blue3: #3A66A7;
 // Navigation
 // =====================
 
-//NEET TO FIX NAVBAR WHEN SM - does not hide when hamburger pops up
-
 .navbar {
   background-color: $color-pdxwit-white;
-//  margin: 0;
+  margin: 0;
   overflow: hidden;
 
   .navbar-list {
       list-style: none;
-//      margin: 0;
+      margin: 0;
       text-transform: uppercase;
       text-decoration: none;
       font-family: $font-sub-headline;
@@ -65,6 +63,7 @@ $color-background-blue3: #3A66A7;
 
 .logo {
   height: 10em;
+  margin-top:1%;
 }
 
 
